--- a/mysitecss.css
+++ b/mysitecss.css
@@ -17,3 +17,7 @@ a:hover,a:active{
   background-color:black;
 }
 footer{text-align:center;font-size: 30px;color:wheat}
+body{
+  background-image: url(file:///D:/BINDHUMADHAVAVARMA.github.io/car.jpg);
+  background-size: 1560px 840px;
+}
