--- a/mysitecss.css
+++ b/mysitecss.css
@@ -18,7 +18,7 @@ a:hover,a:active{
 }
 footer{text-align:center;font-size: 30px;color:wheat}
 body{
-  background-image: url(car.jpg);
+  background-image: url(file:///D:/BINDHUMADHAVAVARMA.github.io/car.jpg);
   background-size: 1560px 840px;
  ;
 }
