--- a/mysitecss.css
+++ b/mysitecss.css
@@ -18,6 +18,6 @@ a:hover,a:active{
 }
 footer{text-align:center;font-size: 30px;color:wheat}
 body{
-  background-image: url(file:///D:/BINDHUMADHAVAVARMA.github.io/car.jpg);
+  background-image: url(https://github.com/BINDHUMADHAVAVARMA/BINDHUMADHAVAVARMA.github.io/blob/master/car.jpg);
   background-size: 1560px 840px;
 }
