--- a/mysitecss.css
+++ b/mysitecss.css
@@ -1,20 +1,36 @@
+*{
+  box-sizing: border-box;
+}
 a:link,a:visited{
+  clear: right;
   text-decoration: none;
   background-color: rgb(255, 115, 0);
   border:2px solid black;
   color: black;
   display:block;
   text-align: center;
-  margin-left: 50px;
   margin-bottom: 10px;
   font-size: 50px;
-  width: 250px;
+  width: 300px;
   padding: 10px 10px 10px 10px;
+  background-repeat: repeat-y;
 }
 a:hover,a:active{
   color:rgb(255, 115, 0);
   border:2px solid rgb(255, 115, 0);
   background-color:black;
 }
-footer{text-align:center;font-size: 30px;color:wheat}
-
+header{float: left;}
+footer{text-align:center;font-size: 30px;color:wheat;clear: left;}
+p{
+  font-size: 20px;
+  color:wheat;
+  font-weight: bold;
+  float: right;
+  width:50%;
+  background-color: gray;
+  backface-visibility: visible;
+  padding:20px;
+  margin-top: 30px;
+  margin-right:50px;
+}
