--- a/module_2_solution/style.css
+++ b/module_2_solution/style.css
@@ -1,6 +1,8 @@
 *{
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 20px;
+}
 .row {
   width: 100%;
 }
@@ -108,4 +110,4 @@ body>div>div{
 .h2{background-color: cornflowerblue;}
 .h3{background-color: crimson;}
 p{padding: 15px;}
-h1{text-align: center;}
+h1{text-align: center;font-size: 30px;}
