--- a/my_res/style.css
+++ b/my_res/style.css
@@ -88,3 +88,6 @@ body{
   .panel-footer>.container{text-align: center;}
 }
 .panel-footer>section>hr{color: white;}
+
+
+#contents{margin-top: 75px;}
