--- a/AgastyaCareers/instyle.css
+++ b/AgastyaCareers/instyle.css
@@ -3,7 +3,7 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body{
-  background-color: blanchedalmond;
+  background-color:rgb(209, 205, 205);
 }
 .dropdown-submenu {
   position: relative;
