--- a/AgastyaCareers/instyle.css
+++ b/AgastyaCareers/instyle.css
@@ -3,7 +3,7 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body{
-  background-color:rgb(209, 205, 205);
+  background-color:rgb(231, 225, 225);
 }
 .dropdown-submenu {
   position: relative;
@@ -41,8 +41,27 @@ body{
 
 .navbar{
   padding-bottom: 0px;
+ 
 }
 
 #searchbar{
   margin-bottom: 10px;
+}
+
+#container{
+  background-image: url('home.jpg');
+ margin-left: 5%;
+  margin-top: 50px;
+  margin-right: 5%;
+  background-position: center;
+  height: 400px;
+  background-repeat: no-repeat;
+  position: relative;
+
+} 
+#content{
+  position: relative;
+  top: 40%;
+  text-align: center;
+  color: black;
 }
