--- a/AgastyaCareers/instyle.css
+++ b/AgastyaCareers/instyle.css
@@ -118,3 +118,6 @@ hr { background-color: white; height: 1px; border: 0; }
   color: whitesmoke;
   font-size: 20px;
 }
+#container{
+  margin-top: 100px;
+}
