--- a/Jittu/styles.css
+++ b/Jittu/styles.css
@@ -1,34 +1,44 @@
-
-h2{
-  color: aliceblue;
+*{
+  font-family: -apple-system, BlinkMacSystemFont,
+  'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-#heading{
-  font-size: 40px;
-  color: aliceblue;
+body{
+  background-color: bisque;
+  margin: 30px;
+}
+#header{
+  border: solid brown 4px;
+  border-radius: 20px;
   text-align: center;
+  background-color: rgb(248, 198, 169);
+  font-size: 20px;
+  margin-bottom: 10px;
   text-decoration: underline;
+}
+#body{
   
-}
-@media(min-width:600px){
-  body{
-    background-image: url(Background.jpeg);
-    background-repeat: repeat-y;
-    background-size: 100%;
-    background-blend-mode: darken;
-  }
-}
-@media(max-width:599px){
-  body{
-    background-image: url(Background1.jpeg);
-    background-repeat: repeat-y;
-    background-size: 100%;
-    background-blend-mode: darken;
-  }
-}
-#container{
-  padding-left: 40px;
+  font-size: 25px;
+  border: solid brown 4px;
+  border-radius: 20px;
+  text-align: center;
+  background-image: url(Background.jpeg);
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position-y: center;
+  margin-bottom: 10px;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 #features{
-  color: aliceblue;
-  font-size:  25px;
+  border: solid brown 4px;
+  border-radius: 20px;
+  text-align: center;
+  background-color: rgb(248, 198, 169);
+  font-size: 20px;
+  margin-bottom: 10px;
+  padding: 20px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
