--- a/solutionvalley/main.css
+++ b/solutionvalley/main.css
@@ -8,6 +8,8 @@ body{
 }
 .header{
     padding: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     padding-right: 30px;
     padding-left: 30px;
 }
@@ -74,16 +76,15 @@ section {
     margin-left: -5%;
     color: tomato;
 }
-h1 {
+#heading {
     font-size: 50px;
-    background: #fff;
     display: inline-block;
     padding: 10px 15px;
     border-radius: 5px;
     margin: 0;
 }
 @media(max-width:700px){
-    h1{font-size :25px;}
+    #heading{font-size :25px;}
     #vertical{margin-top: 70%; margin-left: -10%;}
     img{display: none};
     section:nth-of-type(1) {
@@ -103,23 +104,21 @@ h1 {
     }
 
 }
-p { font-size: 1.5em; }
+
 
 section:nth-of-type(1) {
-    height: 1200px;
+    height: 2200px;
 }
 section:nth-of-type(2) {
-    height: 1200px;
+    height: 2200px;
 }
 section:nth-of-type(3) {
-    height: 1200px;
+    height: 2200px;
 }
 section:nth-of-type(4) {
-    height: 1000px;
+    height: 2000px;
 }
-section:nth-of-type(5) {
-    height: 4000px;
-}
+
 .arrow {
     border: solid tomato;
     border-width: 0 3px 3px 0;
@@ -131,3 +130,12 @@ section:nth-of-type(5) {
     transform: rotate(135deg);
     -webkit-transform: rotate(135deg);
   }
+  .carousel-item{
+    height: 150px;
+  }
+.maincontainer{padding: 0;}
+.footer{
+    padding: 25px;
+    background-color: black;
+
+}
