--- a/mahentech/main.css
+++ b/mahentech/main.css
@@ -41,11 +41,13 @@ body {
     display: block;
     padding-top: 150px;
     width: 100%;
+    height: 100%;
 }
 #v0 {
     position: fixed;
     bottom: 0;
     width: 100%;
+    height: 100%;
     display: block;
 }
 #set-height {
