--- a/mahentech/main.css
+++ b/mahentech/main.css
@@ -42,13 +42,15 @@ body {
     padding-top: 150px;
     width: 100%;
     height: 100%;
+    bottom: 0;
 }
 #v0 {
+    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
     position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    display: block;
+    top: 0;
+    left: 0;
 }
 #set-height {
     display: block;
