--- a/seds_website/main.css
+++ b/seds_website/main.css
@@ -68,22 +68,32 @@
     padding-right: 100px;
     color: white;
   }
+  #jumbocontent2{
+    padding: 25px;
+    background-color:#15173d;
+    padding-left: 100px;
+    padding-right: 100px;
+    color: white;
+  }
   @media(max-width:700px){
     #jumbocontent{
+      padding: 0px;
+    }
+    #jumbocontent2{
       padding: 0px;
     }
   }
   .btn_get_two {
     -webkit-box-shadow: none;
     box-shadow: none;
-    background: #5e2ced;
-    border-color: #5e2ced;
+    background: #f02c54;
+    border-color: #f02c54;
     color: #fff;
 }
 
 .btn_get_two:hover {
     background: transparent;
-    color: #5e2ced;
+    color: #f02c54;
 }.new_footer_area {
     background: #fbfbfd;
 }
@@ -118,12 +128,12 @@
 }
 .btn_get_two:hover {
     background: transparent;
-    color: #5e2ced;
+    color: #f02c54;
 }
 .btn_get:hover {
     color: #fff;
-    background: #6754e2;
-    border-color: #6754e2;
+    background: #f02c54;
+    border-color: #f02c54;
     -webkit-box-shadow: none;
     box-shadow: none;
 }
@@ -187,19 +197,19 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
 .btn_get_two {
     -webkit-box-shadow: none;
     box-shadow: none;
-    background: #5e2ced;
-    border-color: #5e2ced;
+    background: #f02c54;
+    border-color: #f02c54;
     color: #fff;
 }
 
 .btn_get_two:hover {
     background: transparent;
-    color: #5e2ced;
+    color: #f02c54;
 }
 
 .new_footer_top .f_social_icon a:hover {
-    background: #5e2ced;
-    border-color: #5e2ced;
+    background: #f02c54;
+    border-color: #f02c54;
   color:white;
 }
 .new_footer_top .f_social_icon a + a {
@@ -241,7 +251,7 @@ h1, h2, h3, h4, h5, h6 {
     bottom: 0;
     left: 30%;
     -webkit-animation: myfirst 22s linear infinite;
-    animation: myfirst 22s linear infinite;
+    animation: myfirst 20s linear infinite;
 }
 
 .new_footer_top .footer_bg .footer_bg_two {
@@ -250,12 +260,22 @@ h1, h2, h3, h4, h5, h6 {
     height: 100px;
   background-size:100%;
     bottom: 0;
-    left: 38%;
+    left: 40%;
     position: absolute;
     -webkit-animation: myfirst 30s linear infinite;
     animation: myfirst 30s linear infinite;
 }
-
+.new_footer_top .footer_bg .footer_bg_three {
+  background: url("images/ufo3.png") no-repeat center center;
+  width: 88px;
+  height: 100px;
+background-size:100%;
+  bottom: 0;
+  left: 35%;
+  position: absolute;
+  -webkit-animation: myfirst 30s linear infinite;
+  animation: myfirst 25s linear infinite;
+}
 
 
 @-moz-keyframes myfirst {
