--- a/lab2/index.css
+++ b/lab2/index.css
@@ -103,7 +103,7 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
 #container1{
     text-align: center;
     color: white;
-    margin-top: 50px;
+    padding-top: 50px;
     background-color: #15173d;
 }
 .jumbotron{
@@ -125,4 +125,10 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
     65%  { transform: translate(0, 20px); }
     to   { transform: translate(0, -0px); }    
 }
-
+.heading{
+    text-align: center;
+    font-weight: 600;
+    color: #f02c54;
+    font-size: 6vw;
+    text-shadow: 3px 3px 0px #d2d2d2;
+}
