--- a/lab2/index.css
+++ b/lab2/index.css
@@ -129,6 +129,6 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
     text-align: center;
     font-weight: 600;
     color: #f02c54;
-    font-size: 6vw;
+    font-size: 70px;
     text-shadow: 3px 3px 0px #d2d2d2;
 }
