--- a/lab2/index.css
+++ b/lab2/index.css
@@ -64,7 +64,7 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
 
 .footer_bottom {
     font-size: 14px;
-    font-weight: 300;
+    font-weight: 500;
     line-height: 20px;
     color: #7f88a6;
     padding: 27px 0px;
@@ -136,3 +136,28 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
 #content{
     padding: 3% 15% 3% 15%;
 }}
+#skills_tile{
+    color: black;
+    background-repeat: no-repeat;
+    margin: 0px;
+    background-size: cover;
+    background-position: center;
+    padding: 30px;
+  }
+  
+  #tile{text-decoration: none;margin-top: 30px;padding-left: 30px;padding-right: 30px;}
+#tile>div{
+  background-color: white;
+  border-radius: 20px;
+  width: 100%;
+  padding: 25px;
+  margin: 0 auto;
+  box-shadow: 0 0 5px  black;
+}
+#tile>div>#text{
+      font-size: 16px;
+      text-align: center;
+      width: 100%;
+      margin: 0 auto;
+      padding: 3px;
+}
