--- a/seds_website/events.css
+++ b/seds_website/events.css
@@ -5,7 +5,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #3e1148;
+    background-color: #03011f;
     min-height: 100vh;
     width: 100vw;
     max-width: 100vw;
@@ -31,113 +31,86 @@ body {
       font-size: 3rem;
     }
   }
+ 
+  .timeline {
+    padding: 50px 0;
+  }
   
-  .timeline-vertical {
-    --bubble-color: #f02c54;
-    --bubble-hover-color: #15173d;
-    --bubble-height: 32px;
-    --title-color: navajowhite;
-    --title-hover-color: #ffece6;
-    --shadow-color: #00000033;
-    --text-color: white;
-    --text-box-color: #15173d;
-    --text-box-hover-color: #f02c54;
-    --vertical-line-color: #ff000044;
-    --vertical-line-width: 3px;
-    --dot-size: 12px;
-    --dot-color: white;
-    --dot-hover-color: black;
-    --dot-outline-color: #ff000044;
-    --last-border: 2px;
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  .timeline li {
+    position:relative;
+    list-style-type: none;
+    width: 6px;
+    background-color: white;
+    margin: 0 auto;
+    padding-top: 50px;
   }
-  .timeline-vertical li {
-    --arrow-x: -20px;
-    border: none;
+  
+  .timeline li::after {
+    background: white;
+    content: '';
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    position:absolute;
+    left:50%;
+    transform: translateX(-50%);
+    bottom: 0;
+    }
+  
+  
+    .timeline li div{
     position: relative;
+    width: 400px;
+    padding: 15px;
+    border-radius: 15px;
+    bottom: 0;
+    background: rgba(42,50,113, .28);
+    color: #6cacc5;
   }
-  .timeline-vertical li:after {
-    content: "";
-    position: absolute;
-    top: var(--bubble-height);
-    left: calc(-1 * var(--vertical-line-width) / 2);
-    height: calc(100% + var(--bubble-height));
-    border-left: var(--vertical-line-width) solid var(--vertical-line-color);
+ 
+  .timeline li:nth-child(odd) div {
+    left: 45px;
   }
-  .timeline-vertical li:last-child:after {
-    left: calc(-1 * var(--last-border) / 2);
-    border-left: var(--last-border) dashed var(--vertical-line-color);
+  
+  .timeline li:nth-child(even) div {
+    left: -445px;
   }
-  .timeline-vertical li:hover {
-    --title-color: var(--title-hover-color);
-    --bubble-color: var(--bubble-hover-color);
-    --dot-color: var(--dot-hover-color);
-    --text-box-color: var(--text-box-hover-color);
-    --arrow-x: -24px;
-  }
-  .timeline-vertical h1 {
-    color: var(--title-color);
-    text-align: center;
-    position: relative;
-    font-size: calc(var(--bubble-height) / 2.3);
-    line-height: calc(var(--bubble-height) / 2);
-    color: var(--title-color);
-    padding: 12px;
-    background-color: var(--bubble-color);
-    display: inline-block;
-    margin-left: 32px;
-    border-radius: 4px;
-    box-shadow: 4px 0px 8px 0px var(--shadow-color);
-    transition: all 200ms linear;
-  }
-  .timeline-vertical h1:before {
-    position: absolute;
-    content: "";
-    top: 50%;
-    transform: translateY(-50%);
-    left: var(--arrow-x);
-    border-top: calc(var(--bubble-height) / 3) solid transparent;
-    border-right: var(--bubble-height) solid var(--bubble-color);
-    border-bottom: calc(var(--bubble-height) / 3) solid transparent;
-    z-index: -1;
-  }
-  .timeline-vertical h1:after {
-    position: absolute;
-    content: "";
-    width: var(--dot-size);
-    height: var(--dot-size);
-    background-color: var(--dot-color);
-    top: 50%;
-    transform: translateY(-50%);
-    left: calc(-1 * ((var(--dot-size) / 2) + 34px));
-    border: 2px solid var(--dot-outline-color);
-    border-radius: 999px;
-    transition: all 200ms linear;
-    z-index: 1;
-  }
-  .timeline-vertical p {
-    color: var(--text-color);
-    position: relative;
-    font-size: 1rem;
-    text-align: left;
-    margin: 0 0 32px 64px;
+  
+  time {
+    font-weight: bold;
+    font-size: 18px;
     display: block;
-    z-index: -1;
+    margin-bottom: 10px;
   }
-  .timeline-vertical p:after {
-    content: "";
-    position: absolute;
-    top: -24px;
-    left: -16px;
-    bottom: -16px;
-    right: -16px;
-    background-color: var(--text-box-color);
-    border-radius: 8px;
-    z-index: -2;
-    box-shadow: 2px 2px 8px 0px var(--shadow-color);
-    transition: all 200ms linear;
+  
+  .timeline li div {
+    visibility: hidden;
+    opacity: 0;
+    transition: all .5s ease-in-out;
+  }
+  
+  .timeline li:nth-child(odd) div {
+    transform: translate3d(200px, 0, 0);
+  }
+  
+  .timeline li:nth-child(even) div {
+    transform: translate3d(-200px, 0, 0);
+  }
+  
+  .timeline li.show div {
+    transform: none;
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  @media screen and (max-width: 900px) {
+    .timeline li div {
+      width: 250px;
+    }
+    .timeline li:nth-child(even) div {
+      left: -289px;
+      /*250+45-6*/
+    }
   }
   .hovering-left{
     position: absolute;left: 5%;
