--- a/seds_website/main.css
+++ b/seds_website/main.css
@@ -14,7 +14,10 @@
     font-size: 18px;
     font-weight: 600;
 }
+body{width: 100vw;overflow-x: hidden;}
+
 .fa {
+    margin-top: 4px;
     padding: 10px;
     font-size: 20px;
     width: 40px;
@@ -100,7 +103,6 @@
 
 
 .new_footer_top {
-    padding: 120px 0px 120px;
     position: relative;
       overflow-x: hidden;
 }
@@ -503,4 +505,802 @@ section {
   100% {
     opacity: 0;
   }
+}
+.footer {
+
+  background: #121212;
+  padding: 30px 0px;
+  font-family: 'Play', sans-serif;
+  text-align: center;
+}
+
+.footer .row_foot {
+  width: 100%;
+  margin: 1% 0%;
+  padding: 0.8% 0%;
+  color: gray;
+  font-size: 1em;
+  text-align: center;
+}
+
+.footer .row_foot_1 {
+  width: 100%;
+  margin: 1% 0%;
+  padding: 0.6% 0%;
+  color: gray;
+  font-size: 1.5em;
+  text-align: center;
+}
+
+.footer .row_foot_2 {
+  width: 100%;
+  margin: 1% 0%;
+  padding: 0.6% 0%;
+  color: gray;
+  font-size: 0.8em;
+  text-align: center;
+}
+
+.footer .row_foot_3 {
+  width: 100%;
+  margin: 1% 0%;
+  padding: 0.6% 0%;
+  color: gray;
+  font-size: 2em;
+  text-align: center;
+  margin-bottom: 0px;
+  /* text-decoration: underline; */
+}
+
+.footer .row_foot_3 p {
+  margin-bottom: 0px;
+}
+
+.footer .row_foot a {
+  text-decoration: none;
+  color: gray;
+  transition: 0.5s;
+}
+
+.footer .row_foot a:hover {
+  color: #fff;
+}
+
+.footer .row_foot ul {
+  width: 100%;
+}
+
+.footer .row_foot ul li {
+  display: inline-block;
+  margin: 0px 30px;
+}
+
+.footer .row_foot a i {
+  font-size: 2em;
+  margin: 0% 1%;
+}
+
+@media (max-width:720px) {
+  .footer {
+      text-align: left;
+      padding: 5%;
+  }
+
+  .footer .row_foot ul li {
+      display: block;
+      margin: 10px 0px;
+      text-align: left;
+  }
+
+  .footer .row_foot a i {
+      margin: 0% 3%;
+  }
+
+  .footer .row_foot {
+      font-size: 0.7em;
+  }
+
+  .footer .row_foot_1 {
+      font-size: 1em;
+  }
+
+  .footer .row_foot_3 {
+      font-size: 1.5em;
+  }
+
+}
+.setmargin{padding-top: 80px;}
+.about{
+  background-color: white;
+  background: white;
+
+ z-index: 1;
+}
+#timeline {
+  display: flex;
+  background-color: #031625;
+  height: 88vh;
+}
+#timeline:hover .tl-item {
+  width: 23.3333%;
+}
+
+.tl-item {
+  transform: translate3d(0, 0, 0);
+  position: relative;
+  width: 25%;
+  height: 100vh;
+  min-height: 600px;
+  color: #fff;
+  overflow: hidden;
+  transition: width 0.5s ease;
+}
+.tl-item:before, .tl-item:after {
+  transform: translate3d(0, 0, 0);
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+.tl-item:after {
+  background: rgba(3, 22, 37, 0.85);
+  opacity: 1;
+  transition: opacity 0.5s ease;
+}
+.tl-item:before {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, black 75%);
+  z-index: 1;
+  opacity: 0;
+  transform: translate3d(0, 0, 0) translateY(50%);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+.tl-item:hover {
+  width: 30% !important;
+}
+.tl-item:hover:after {
+  opacity: 0;
+}
+.tl-item:hover:before {
+  opacity: 1;
+  transform: translate3d(0, 0, 0) translateY(0);
+  transition: opacity 1s ease, transform 1s ease 0.25s;
+}
+.tl-item:hover .tl-content {
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 0.3s ease 0.2s;
+}
+.tl-item:hover .tl-bg {
+  filter: grayscale(0);
+}
+
+.tl-content {
+  transform: translate3d(0, 0, 0) translateY(25px);
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  margin: 0 1.618em;
+  top: 55%;
+  opacity: 0;
+}
+.tl-content h1 {
+  font-family: "Pathway Gothic One", Helvetica Neue, Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  color: #1779cf;
+  font-size: 1.44rem;
+  font-weight: normal;
+}
+
+.tl-year {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 1;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  padding-top: 17px;
+}
+.tl-year p {
+  font-family: "Pathway Gothic One", Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 1.728rem;
+  line-height: 0;
+}
+
+.tl-bg {
+  transform: translate3d(0, 0, 0);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-size: cover;
+  background-position: center center;
+  transition: filter 0.5s ease;
+  filter: grayscale(100%);
+}
+
+.our-team {
+  padding: 35px 0 45px;
+  margin-bottom: 30px;
+  background-color: #e7e5ee;
+  /* background of images {white}*/
+  text-align: center;
+  overflow: hidden;
+  position: relative;
+  border-radius: 20px;
+}
+
+.our-team .picture {
+  display: inline-block;
+  height: 130px;
+  width: 130px;
+  margin-bottom: 50px;
+  z-index: 1;
+  position: relative;
+}
+
+.our-team .picture::before {
+  content: "";
+  width: 100%;
+  height: 0;
+  border-radius: 50%;
+  background-color: #003662;
+  /* up to down swipe {purple}*/
+  position: absolute;
+  bottom: 135%;
+  right: 0;
+  left: 0;
+  opacity: 0.9;
+  transform: scale(3);
+  transition: all 0.3s linear 0s;
+}
+
+.our-team:hover .picture::before {
+  height: 100%;
+}
+
+.our-team .picture::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #003662;
+  /*circle around picture*/
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.our-team .picture img {
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
+  transform: scale(1);
+  transition: all 0.9s ease 0s;
+}
+
+.our-team:hover .picture img {
+  box-shadow: 0 0 0 14px #bfd3d8;
+  transform: scale(1.1);
+}
+
+.our-team .title {
+  display: block;
+  font-size: 15px;
+  color: #4e5052;
+  text-transform: capitalize;
+}
+
+.our-team .social {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: #002340;
+  position: absolute;
+  bottom: -100px;
+  left: 0;
+  transition: all 0.5s ease 0s;
+}
+
+.our-team:hover .social {
+  bottom: 0;
+}
+
+.our-team .social li {
+  display: inline-block;
+}
+
+.our-team .social li a {
+  display: block;
+  padding: 10px;
+  font-size: 17px;
+  color: white;
+  transition: all 0.3s ease 0s;
+  text-decoration: none;
+}
+
+.our-team .social li a:hover {
+  color: #002340;
+  background-color: #bfd3d8;
+}
+
+@media (max-width:500px) {
+
+  .our-team .picture img {
+      box-shadow: 0 0 0 14px #bfd3d8;
+      transform: scale(1.1);
+
+  }
+
+  .our-team .social {
+      bottom: 0;
+  }
+}
+
+h1 {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  font-family: "Raleway", sans-serif;
+  font-weight: 300;
+  font-size: 40px;
+  color: #ffffff;
+  -webkit-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+}
+
+h1 span {
+  display: block;
+  font-size: 0.5em;
+  line-height: 1.3;
+}
+
+h1 em {
+  font-style: normal;
+  font-weight: 600;
+}
+
+.twelve h1 {
+  font-size: 26px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  /* width: 160px; */
+  text-align: center;
+  margin: auto;
+  white-space: nowrap;
+  padding-bottom: 13px;
+}
+
+.twelve h1:before {
+  background-color: #c50000;
+  content: '';
+  display: block;
+  height: 3px;
+  width: 75px;
+  margin-bottom: 5px;
+}
+
+.twelve h1:after {
+  background-color: #c50000;
+  content: '';
+  display: block;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  height: 3px;
+  width: 75px;
+  margin-bottom: 0.25em;
+}
+
+.Subheadingdiv {
+  position: relative;
+  background: #121212aa;
+  width: 90%;
+  max-width: 500px;
+  padding: 2em;
+  margin: 50px auto;
+  border: 3px solid rgba(0, 0, 0, 0.08);
+  text-align: center;
+}
+
+h1:before,
+h1:after {
+  background-color: #c50000;
+}
+
+/* ============================= */
+#Team_HEAD {
+  height: 50vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Barlow');
+
+#Team_HEAD {
+  background: #2B272C url(images/sun2.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  font-family: 'Orbitron', sans-serif;
+}
+
+.container {
+  width: 100%;
+  /* position: relative; */
+  overflow: hidden;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1.main,
+p.demos {
+  -webkit-animation-delay: 18s;
+  -moz-animation-delay: 18s;
+  -ms-animation-delay: 18s;
+  animation-delay: 18s;
+}
+
+.sp-container {
+  position: relative;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  background: -webkit-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
+  background: -moz-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
+  background: -ms-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
+  background: radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
+}
+
+.sp-content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0px;
+  z-index: 1000;
+}
+
+.sp-container h2 {
+  position: absolute;
+  top: 50%;
+  line-height: 100px;
+  height: 90px;
+  margin-top: -50px;
+  font-size: 80px;
+  width: 100%;
+  text-align: center;
+  color: transparent;
+  -webkit-animation: blurFadeInOut 3s ease-in backwards;
+  -moz-animation: blurFadeInOut 3s ease-in backwards;
+  -ms-animation: blurFadeInOut 3s ease-in backwards;
+  animation: blurFadeInOut 3s ease-in backwards;
+}
+
+.sp-container h2.frame-1 {
+  -webkit-animation-delay: 0s;
+  -moz-animation-delay: 0s;
+  -ms-animation-delay: 0s;
+  animation-delay: 0s;
+  font-size: 50px;
+}
+
+.sp-container h2.frame-2 {
+  -webkit-animation-delay: 3s;
+  -moz-animation-delay: 3s;
+  -ms-animation-delay: 3s;
+  animation-delay: 3s;
+}
+
+.sp-container h2.frame-3 {
+  -webkit-animation-delay: 6s;
+  -moz-animation-delay: 6s;
+  -ms-animation-delay: 6s;
+  animation-delay: 6s;
+}
+
+.sp-container h2.frame-4 {
+  font-size: 200px;
+  -webkit-animation-delay: 9s;
+  -moz-animation-delay: 9s;
+  -ms-animation-delay: 9s;
+  animation-delay: 9s;
+}
+
+.sp-container h2.frame-5 {
+  -webkit-animation: none;
+  -moz-animation: none;
+  -ms-animation: none;
+  animation: none;
+  color: transparent;
+  text-shadow: 0px 0px 1px #fff;
+}
+
+.sp-container h2.frame-5 span {
+  -webkit-animation: blurFadeIn 3s ease-in 12s backwards;
+  -moz-animation: blurFadeIn 1s ease-in 12s backwards;
+  -ms-animation: blurFadeIn 3s ease-in 12s backwards;
+  animation: blurFadeIn 3s ease-in 12s backwards;
+  color: transparent;
+  text-shadow: 0px 0px 1px #fff;
+}
+
+.sp-container h2.frame-5 span:nth-child(2) {
+  -webkit-animation-delay: 13s;
+  -moz-animation-delay: 13s;
+  -ms-animation-delay: 13s;
+  animation-delay: 13s;
+}
+
+.sp-container h2.frame-5 span:nth-child(3) {
+  -webkit-animation-delay: 14s;
+  -moz-animation-delay: 14s;
+  -ms-animation-delay: 14s;
+  animation-delay: 14s;
+}
+
+
+
+
+/**/
+
+@-webkit-keyframes blurFadeInOut {
+  0% {
+      opacity: 0;
+      text-shadow: 0px 0px 40px #fff;
+      -webkit-transform: scale(1.3);
+  }
+
+  20%,
+  75% {
+      opacity: 1;
+      text-shadow: 0px 0px 1px #fff;
+      -webkit-transform: scale(1);
+  }
+
+  100% {
+      opacity: 0;
+      text-shadow: 0px 0px 50px #fff;
+      -webkit-transform: scale(0);
+  }
+}
+
+@-webkit-keyframes blurFadeIn {
+  0% {
+      opacity: 0;
+      text-shadow: 0px 0px 40px #fff;
+      -webkit-transform: scale(1.3);
+  }
+
+  50% {
+      opacity: 0.5;
+      text-shadow: 0px 0px 10px #fff;
+      -webkit-transform: scale(1.1);
+  }
+
+  100% {
+      opacity: 1;
+      text-shadow: 0px 0px 1px #fff;
+      -webkit-transform: scale(1);
+  }
+}
+
+@-webkit-keyframes fadeInBack {
+  0% {
+      opacity: 0;
+      -webkit-transform: scale(0);
+  }
+
+  50% {
+      opacity: 0.4;
+      -webkit-transform: scale(2);
+  }
+
+  100% {
+      opacity: 0.2;
+      -webkit-transform: scale(5);
+  }
+}
+
+@-webkit-keyframes fadeInRotate {
+  0% {
+      opacity: 0;
+      -webkit-transform: scale(0) rotate(360deg);
+  }
+
+  100% {
+      opacity: 1;
+      -webkit-transform: scale(1) rotate(0deg);
+  }
+}
+
+/**/
+
+@-moz-keyframes blurFadeInOut {
+  0% {
+      opacity: 0;
+      text-shadow: 0px 0px 40px #fff;
+      -moz-transform: scale(1.3);
+  }
+
+  20%,
+  75% {
+      opacity: 1;
+      text-shadow: 0px 0px 1px #fff;
+      -moz-transform: scale(1);
+  }
+
+  100% {
+      opacity: 0;
+      text-shadow: 0px 0px 50px #fff;
+      -moz-transform: scale(0);
+  }
+}
+
+@-moz-keyframes blurFadeIn {
+  0% {
+      opacity: 0;
+      text-shadow: 0px 0px 40px #fff;
+      -moz-transform: scale(1.3);
+  }
+
+  100% {
+      opacity: 1;
+      text-shadow: 0px 0px 1px #fff;
+      -moz-transform: scale(1);
+  }
+}
+
+@-moz-keyframes fadeInBack {
+  0% {
+      opacity: 0;
+      -moz-transform: scale(0);
+  }
+
+  50% {
+      opacity: 0.4;
+      -moz-transform: scale(2);
+  }
+
+  100% {
+      opacity: 0.2;
+      -moz-transform: scale(5);
+  }
+}
+
+@-moz-keyframes fadeInRotate {
+  0% {
+      opacity: 0;
+      -moz-transform: scale(0) rotate(360deg);
+  }
+
+  100% {
+      opacity: 1;
+      -moz-transform: scale(1) rotate(0deg);
+  }
+}
+
+/**/
+
+@keyframes blurFadeInOut {
+  0% {
+      opacity: 0;
+      text-shadow: 0px 0px 40px #fff;
+      transform: scale(1.3);
+  }
+
+  20%,
+  75% {
+      opacity: 1;
+      text-shadow: 0px 0px 1px #fff;
+      transform: scale(1);
+  }
+
+  100% {
+      opacity: 0;
+      text-shadow: 0px 0px 50px #fff;
+      transform: scale(0);
+  }
+}
+
+@keyframes blurFadeIn {
+  0% {
+      opacity: 0;
+      text-shadow: 0px 0px 40px #fff;
+      transform: scale(1.3);
+  }
+
+  50% {
+      opacity: 0.5;
+      text-shadow: 0px 0px 10px #fff;
+      transform: scale(1.1);
+  }
+
+  100% {
+      opacity: 1;
+      text-shadow: 0px 0px 1px #fff;
+      transform: scale(1);
+  }
+}
+
+@keyframes fadeInBack {
+  0% {
+      opacity: 0;
+      transform: scale(0);
+  }
+
+  50% {
+      opacity: 0.4;
+      transform: scale(2);
+  }
+
+  100% {
+      opacity: 0.2;
+      transform: scale(5);
+  }
+}
+
+@keyframes fadeInRotate {
+  0% {
+      opacity: 0;
+      transform: scale(0) rotate(360deg);
+  }
+
+  100% {
+      opacity: 1;
+      transform: scale(1) rotate(0deg);
+  }
+}
+
+@media (max-width:992px) {
+  #Team_HEAD {
+      height: 30vh;
+
+  }
+
+  .sp-container h2 {
+      font-size: 22.5px;
+  }
+
+  .sp-container h2.frame-1 {
+      font-size: 15px;
+  }
+
+  .sp-container h2.frame-4 {
+      font-size: 50px;
+  }
+
+}
+
+@media (max-width:500px) {
+  #Team_HEAD {
+      height: 30vh;
+
+  }
+
+  .sp-container h2 {
+      font-size: 22.5px;
+  }
+
+  .sp-container h2.frame-1 {
+      font-size: 11px;
+  }
+
+  .sp-container h2.frame-4 {
+      font-size: 50px;
+  }
+
+
 }
