--- a/seds_website/main.css
+++ b/seds_website/main.css
@@ -8,7 +8,9 @@
 	height: 100%;
 	z-index: 9999;
 	background: url(images/Preloader_11.gif) center no-repeat #fff;
+  background-size: 35vw;
 }
+@media(max-width:560px){.se-pre-con{background-size: 35vh;}}
 *{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -678,11 +680,7 @@ section {
 .tl-item:hover {
   width: 30% !important;
 }
-@media(max-width:540px){
-  .tl-item:hover {
-    width: 90% !important;
-  }
-}
+
 .tl-item:hover:after {
   opacity: 0;
 }
@@ -702,7 +700,8 @@ section {
 
 .tl-content {
   transform: translate3d(0, 0, 0) translateY(25px);
-  position: relative;
+  position: absolute;
+  bottom: 0;
   z-index: 1;
   text-align: center;
   margin: 0 1.618em;
@@ -729,7 +728,7 @@ section {
 }
 .tl-year p {
   font-family: "Pathway Gothic One", Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 1.728rem;
+  font-size: 30px;
   line-height: 0;
 }
 
@@ -745,7 +744,20 @@ section {
   transition: filter 0.5s ease;
   filter: grayscale(100%);
 }
-
+@media(max-width:540px){
+  .tl-item:hover {
+    width: 90% !important;
+    height: 75%;
+  }
+  .tl-item {width:33.3333%;height: 75%;}
+  #timeline{height: 75%;}
+  .tl-year p{font-size: 20px;}
+  #timeline:hover .tl-item {
+    width: 33.3333%;
+    height: 75%;
+  }
+  
+}
 .our-team {
   padding: 35px 0 45px;
   margin-bottom: 30px;
@@ -940,7 +952,7 @@ h1:after {
 
 /* ============================= */
 #Team_HEAD {
-  height: 50vh;
+  height: 30vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1353,6 +1365,7 @@ p.demos {
 #Modal_description{padding:25px;}
 .container .box:before,
 .container .box:after {
+  border-radius: 30px;
 	background-image: linear-gradient(
 											45deg,
 											#025396,
@@ -1366,9 +1379,17 @@ p.demos {
 	top: 0;
 	width: 100%;
 }
-
+.box{border-radius: 30px;}
+.box span{border-radius: 30px;}
+.box div{border-radius: 30px;}
+@media(max-width:560px){
+  .box{font-size: x-small;}
+  #btncontainer button{padding: 0;}
+ 
+}
 .container .box:nth-child(2):before,
 .container .box:nth-child(2):after {
+  border-radius: 30px;
 	background-image: linear-gradient(
 											315deg,
 											#17153d,
@@ -1378,6 +1399,7 @@ p.demos {
 
 .container .box:nth-child(3):before,
 .container .box:nth-child(3):after {
+  border-radius: 30px;
 	background-image: linear-gradient(
 											315deg,
 											#17153d,
@@ -1400,13 +1422,14 @@ p.demos {
 .container .box:after {
 	filter: blur(30px);
 }
+@media(min-width:560px){
 
 .container .box:hover,
 .container .box:focus,
 .container .box:active {
 	transform: translateY(-20px);
 }
-
+}
 .container .box span:before {
 	background-color: rgba(255, 255, 255, 0.1);
 	content: '';
