--- a/pranav/styles.css
+++ b/pranav/styles.css
@@ -28,6 +28,7 @@ body {
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center;
+        max-height: 100vh;
     }
     .doodle {
         display: none;
